--- a/examples/rempel.ini
+++ b/examples/rempel.ini
@@ -1,20 +1,23 @@
 # SIR3D configuration File
 
 [General]
-Output file = '/scratch1/3dcubes/output2.h5'
-Atmosphere type = 'MURAM'
+Stokes output = '/scratch1/3dcubes/output_stokes.h5'
+Interpolated model output = '/scratch1/3dcubes/output_model.h5'
+Interpolate tau = 0.0,-0.5,-1.0,-1.5,-2.0,-2.5,-3.0
 
 [Spectral regions]
     [[Region 1]]
     Name = '6301-6302'
-    Wavelength range = 6300.8921, 6303.2671
-    N. wavelengths = 112
+    Wavelength range = 6300.8521, 6303.3119
+    N. wavelengths = 458
     Spectral lines = 200, 201
 
 [Atmosphere]
 # Remember that "y" is the vertical direction in MURAM simulations but it is the vertical in this code
+Type = 'MURAM'
 Dimensions = 1536, 128, 1536
 deltaz = 8e5
+Maximum tau = 2.0
 Temperature = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/temp.float'
 Pressure = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/pres.float'
 Density = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/dens.float'
