Changed ordering of Stokes output to (4,n_lambda,nx,ny)

--- a/examples/rempel_invert.ini
+++ b/examples/rempel_invert.ini
@@ -1,8 +1,8 @@
 # SIR3D configuration File
 
 [General]
-Stokes output = '/scratch/3dcubes/rempel_stokes.h5'
-Interpolated model output = '/scratch/3dcubes/rempel_model.h5'
+Stokes output = '/scratch1/3dcubes/rempel_stokes_invert.h5'
+Interpolated model output = '/scratch1/3dcubes/rempel_model_invert.h5'
 Interpolate tau = 0.0,-0.5,-1.0,-1.5,-2.0,-2.5,-3.0
 
 [Spectral regions]
@@ -18,6 +18,7 @@ Type = 'MURAM'
 Dimensions = 1536, 128, 1536
 deltaz = 16e5
 Maximum tau = 2.0
+Invert magnetic field = True
 Temperature = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/temp.float'
 Pressure = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/pres.float'
 Density = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/dens.float'
@@ -26,7 +27,7 @@ Bx = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/magz.float'
 By = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/magx.float'
 Bz = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/magy.float'
 
-#    [[Multipliers]]
-#        Bx = 3.5449077018110318
-#        By = 3.5449077018110318
-#        Bz = 3.5449077018110318
+    [[Multipliers]]
+        Bx = -1.0 
+        By = -1.0 
+        Bz = -1.0 
