SIR EoS is included now

--- a/examples/test.ini
+++ b/examples/test.ini
@@ -1,8 +1,8 @@
 # SIR3D configuration File
 
 [General]
-Stokes output = '/scratch1/3dcubes/rempel_stokes.h5'
-Interpolated model output = '/scratch1/3dcubes/rempel_model.h5'
+Stokes output = '/scratch/test_stokes.h5'
+Interpolated model output = '/scratch/test_model.h5'
 Interpolate tau = 0.0,-0.5,-1.0,-1.5,-2.0,-2.5,-3.0
 EOS = 'SIR'
 
