SIR opacities and P interpolation in log

--- a/examples/cheung.ini
+++ b/examples/cheung.ini
@@ -1,9 +1,10 @@
 # SIR3D configuration File
 
 [General]
-Stokes output = '/scratch1/3dcubes/cheung_stokes.h5'
-Interpolated model output = '/scratch1/3dcubes/cheung_model.h5'
+Stokes output = '/scratch1/3dcubes/cheung_stokes_sir.h5'
+Interpolated model output = '/scratch1/3dcubes/cheung_model_sir.h5'
 Interpolate tau = 0.0,-0.5,-1.0,-1.5,-2.0,-2.5,-3.0
+EOS = 'SIR'
 
 [Spectral regions]
     [[Region 1]]
@@ -18,9 +19,9 @@ Type = 'MURAM'
 Dimensions = 960, 256, 1920
 deltaz = 32e5
 Maximum tau = 2.0
-Invert magnetic field = True
+Tau delta = 0.1
 Temperature = '/scratch1/3dcubes/cheung/active/eosT.095000'
-Pressure = '/scratch1/3dcubes/cheung/active/eosT.095000'
+Pressure = '/scratch1/3dcubes/cheung/active/eosP.095000'
 Density = '/scratch1/3dcubes/cheung/active/result_0.095000'
 rho_vz = '/scratch1/3dcubes/cheung/active/result_2.095000'
 Bx = '/scratch1/3dcubes/cheung/active/result_5.095000'
