--- a/examples/test.ini
+++ b/examples/test.ini
@@ -19,6 +19,7 @@ Type = 'MURAM'
 Dimensions = 1536, 128, 1536
 deltaz = 16e5
 Maximum tau = 2.0
+Tau delta = 0.1
 Temperature = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/temp.float'
 Pressure = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/pres.float'
 Density = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/dens.float'
