New version, including slanted rays

--- a/examples/rempel.ini
+++ b/examples/rempel.ini
@@ -1,32 +1,37 @@
 # SIR3D configuration File
 
 [General]
-Stokes output = 'rempel_stokes.h5'
+Stokes output = 'rempel_stokes2.h5'
 Interpolated model output = 'rempel_model.h5'
 Interpolate tau = 0.0,-0.5,-1.0,-1.5,-2.0,-2.5,-3.0
 EOS = 'SIR'
 
 [Spectral regions]
     [[Region 1]]
-    Name = '6301-6302'
-    Wavelength range = 6300.8521, 6303.3119
-    N. wavelengths = 458
-    Spectral lines = 200, 201
+    Name = '6173'
+    Wavelength range = 6172.7352, 6173.9352
+    N. wavelengths = 121
+    Spectral lines = 204,
 
 [Atmosphere]
-# Remember that "y" is the vertical direction in MURAM simulations but it is the vertical in this code
+# Remember that "y" is the vertical direction in MURAM simulations but z is the vertical in this code
 Type = 'MURAM'
 Dimensions = 1536, 128, 1536
 deltaz = 16e5
+deltaxy = 32e5
 Maximum tau = 2.0
 Tau delta = 0.1
-Temperature = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/temp.float'
-Pressure = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/pres.float'
-Density = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/dens.float'
-vz = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/vely.float'
-Bx = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/magz.float'
-By = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/magx.float'
-Bz = '/scratch1/3dcubes/rempel/spot_32x16x32km_ng/magy.float'
+mux = 0.5
+muy = 1.0
+Temperature = '/scratch/aasensio/3dcubes/spot_32x16x32km_ng/temp.float'
+Pressure = '/scratch/aasensio/3dcubes/spot_32x16x32km_ng/pres.float'
+Density = '/scratch/aasensio/3dcubes/spot_32x16x32km_ng/dens.float'
+vx = '/scratch/aasensio/3dcubes/spot_32x16x32km_ng/velz.float'
+vy = '/scratch/aasensio/3dcubes/spot_32x16x32km_ng/velx.float'
+vz = '/scratch/aasensio/3dcubes/spot_32x16x32km_ng/vely.float'
+Bx = '/scratch/aasensio/3dcubes/spot_32x16x32km_ng/magz.float'
+By = '/scratch/aasensio/3dcubes/spot_32x16x32km_ng/magx.float'
+Bz = '/scratch/aasensio/3dcubes/spot_32x16x32km_ng/magy.float'
 
 #    [[Multipliers]]
 #        Bx = 3.5449077018110318
